--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "mssql": "^10.0.2",
     "next": "14.1.0",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
     "react-select": "^5.8.0"
