--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-modal": "^3.16.1",
     "react-select": "^5.8.0"
   },
   "devDependencies": {
