--- a/.azure/config
+++ b/.azure/config
@@ -1,7 +1,7 @@
 [defaults]
 group = km_nc_i
-sku = F1
-appserviceplan = nna_asp_614
-location = centralus
-web = km-nci-tool
+sku = B1
+appserviceplan = ASP-kmnci-ac9e
+location = norwayeast
+web = km-nci
 
