--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "mssql": "^10.0.2",
-    "next": "14.1.0",
+    "mssql": "^11.0.1",
+    "next": "^14.1.0",
     "nodemailer": "^6.9.14",
     "react": "^18",
     "react-dom": "^18",
